--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "as.leap.demo.marketing"
+        applicationId "com.maxleap.demo.marketing"
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
@@ -20,10 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile('com.google.android.gms:play-services:6.1.+') {
         exclude module: 'support-v4'
     }
-    compile files('libs/lc-sdk-core-v0.7.0.jar')
+    compile files('libs/maxleap-sdk-core-v0.8.0.jar')
 }
