--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="as.leap.demo.marketing">
+    package="com.maxleap.demo.marketing">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,9 +9,9 @@
 
     <!-- your package -->
     <permission
-        android:name="as.leap.demo.marketing.permission.C2D_MESSAGE"
+        android:name="com.maxleap.demo.marketing.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="as.leap.demo.marketing.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.maxleap.demo.marketing.permission.C2D_MESSAGE" />
 
     <!-- App receives GCM messages. -->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -34,21 +34,21 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="as.leap.internal.marketing.TestMessageListActivity"/>
+        <activity android:name="com.maxleap.internal.marketing.TestMessageListActivity" />
 
         <!-- senderId -->
         <meta-data
-            android:name="as.leap.push.gcm_sender_id"
-            android:value="id:yourSenderId" />
+            android:name="com.maxleap.push.gcm_sender_id"
+            android:value="id:890404010829" />
 
         <!-- channel -->
         <meta-data
-            android:name="lc_channel"
+            android:name="ml_channel"
             android:value="google_play" />
 
         <!--notification icon-->
         <meta-data
-            android:name="as.leap.push.notification_icon"
+            android:name="com.maxleap.push.notification_icon"
             android:resource="@android:drawable/ic_dialog_alert" />
 
         <!-- play services -->
@@ -58,13 +58,13 @@
 
         <!-- receiver -->
         <receiver
-            android:name="as.leap.push.GcmBroadcastReceiver"
+            android:name="com.maxleap.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="as.leap.demo.marketing" />
+                <category android:name="com.maxleap.demo.marketing" />
             </intent-filter>
         </receiver>
 
@@ -72,8 +72,8 @@
             android:name=".CustomPushReceiver"
             android:exported="false">
             <intent-filter>
-                <action android:name="as.leap.push.intent.RECEIVE" />
-                <action android:name="as.leap.push.intent.OPEN" />
+                <action android:name="com.maxleap.push.intent.RECEIVE" />
+                <action android:name="com.maxleap.push.intent.OPEN" />
             </intent-filter>
         </receiver>
 
